deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: set-time
spec:
  ports:
    - port: 8080
